--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -1,5 +1,10 @@
 @charset "utf-8";
 
+// custom variables
+
+$post-color: #556B2F;
+$button-color: #ffffff;
+
 // Define defaults for each variable.
 
 $base-font-family: Roboto !default;
