--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -266,39 +266,47 @@
 }
 
 .post-title {
-  @include relative-font-size(2.625);
+  @include relative-font-size(2);
   letter-spacing: -1px;
   line-height: 1;
 
   @include media-query($on-laptop) {
-    @include relative-font-size(2.25);
+    @include relative-font-size(2);
   }
 }
 
 .post-content {
   margin-bottom: $spacing-unit;
 
-  h2 {
-    @include relative-font-size(2);
+  h1 {
+    @include relative-font-size(1.6);
 
     @include media-query($on-laptop) {
-      @include relative-font-size(1.75);
+      @include relative-font-size(1.475);
     }
   }
 
-  h3 {
-    @include relative-font-size(1.625);
+  h2 {
+    @include relative-font-size(1.4);
 
     @include media-query($on-laptop) {
       @include relative-font-size(1.375);
     }
   }
 
-  h4 {
-    @include relative-font-size(1.25);
+  h3 {
+    @include relative-font-size(1.2);
 
     @include media-query($on-laptop) {
-      @include relative-font-size(1.125);
+      @include relative-font-size(1.175);
+    }
+  }
+
+  h4 {
+    @include relative-font-size(1.1);
+
+    @include media-query($on-laptop) {
+      @include relative-font-size(1.025);
     }
   }
 }
