--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,6 +7,8 @@ layout: default
     <h1 class="page-heading">{{ page.title }}</h1>
   {%- endif -%}
 
+  <img src="/assets/encabezado.png">
+
   {{ content }}
 
   {%- if site.posts.size > 0 -%}
