rename header image

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@ layout: default
     <h1 class="page-heading">{{ page.title }}</h1>
   {%- endif -%}
 
-  <img src="/assets/encabezado.png">
+  <img src="/assets/header.png" style="width: 100%;">
 
   {{ content }}
 
