--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -251,3 +251,9 @@ table {
     border: 1px solid $grey-color-light;
   }
 }
+
+.header-image {
+  width: 100%;
+  border: 2px solid #000000;
+  border-radius: 45px 0.1px 45px 0.1px;
+}
